demo-applications/ing-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello
spec:
  selector:
    app: hello
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
        tier: backend
        track: stable
    spec:
      serviceAccountName: pks-networking-test-sa
      containers:
        - name: hello
          image: "gcr.io/google-samples/hello-go-gke:1.0"
          ports:
            - name: http
              containerPort: 80
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534    
---
kind: Service
apiVersion: v1
metadata:
  name: nihao
spec:
  selector:
    app: nihao
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nihao
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nihao
        tier: backend
        track: stable
    spec:
      serviceAccountName: pks-networking-test-sa
      containers:
        - name: nihao
          image: "gcr.io/google-samples/hello-go-gke:1.0"
          ports:
            - name: http
              containerPort: 80
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534    
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello
          servicePort: 80
      - path: /nihao
        backend:
          serviceName: nihao
          servicePort: 80
